--- a/lab2/etc/conf.d/default.conf
+++ b/lab2/etc/conf.d/default.conf
@@ -1,6 +1,6 @@
     server {
     listen               443 ssl;
-    ssl_certificate      /etc/nginx/certs/server.crt;
+    ssl_certificate      /etc/nginx/certs/server-chain.crt;
     ssl_certificate_key  /etc/nginx/certs/server.rsa;
 
     location / {
